unpackaged/main/default/objects/zkfedex__CommercialInvoice__c/zkfedex__CommercialInvoice__c.object-meta.xml
<CustomObject>
    <label>FedEx Commercial Invoice</label>
    <nameField>
        <displayFormat>FEDEX-COM-INV-{00000000}</displayFormat>
        <label>Commercial Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FedEx Commercial Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>