unpackaged/main/default/objects/zkfedex__CommercialInvoice__c/fields/zkfedex__Comments__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__Comments__c</fullName>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>