unpackaged/main/default/objects/zkfedex__CommercialInvoice__c/fields/zkfedex__DeclarationStatement__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DeclarationStatement__c</fullName>
    <label>Declaration Statement</label>
    <type>TextArea</type>
</CustomField>