unpackaged/main/default/objects/zkfedex__CommercialInvoice__c/fields/zkfedex__HandlingCosts__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__HandlingCosts__c</fullName>
    <label>Handling Costs</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>