unpackaged/main/default/objects/zkfedex__CommercialInvoice__c/fields/zkfedex__InsuranceCharges__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__InsuranceCharges__c</fullName>
    <label>Insurance Charges</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>