unpackaged/main/default/objects/zkfedex__CommercialInvoice__c/fields/zkfedex__OriginatorName__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__OriginatorName__c</fullName>
    <label>Originator Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>