unpackaged/main/default/objects/zkfedex__CommercialInvoice__c/fields/zkfedex__OtherCharges__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__OtherCharges__c</fullName>
    <label>Other Charges</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>