unpackaged/main/default/objects/zkfedex__CommercialInvoice__c/fields/zkfedex__PackingCosts__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PackingCosts__c</fullName>
    <label>Packing Costs</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>