unpackaged/main/default/objects/zkfedex__CommercialInvoice__c/fields/zkfedex__PartiesToTransactionAreRelated__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PartiesToTransactionAreRelated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parties to Transaction are Related</label>
    <type>Checkbox</type>
</CustomField>