unpackaged/main/default/objects/zkfedex__CommercialInvoice__c/fields/zkfedex__PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PaymentTerms__c</fullName>
    <label>Payment Terms</label>
    <length>35</length>
    <type>Text</type>
</CustomField>