unpackaged/main/default/objects/zkfedex__CommercialInvoice__c/fields/zkfedex__Purpose__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gift</fullName>
            </value>
            <value>
                <fullName>Not Sold</fullName>
            </value>
            <value>
                <fullName>Personal Effects</fullName>
            </value>
            <value>
                <fullName>Repair and Return</fullName>
            </value>
            <value>
                <fullName>Sample</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>