unpackaged/main/default/objects/zkfedex__CommercialInvoice__c/fields/zkfedex__ReferenceValue__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ReferenceValue__c</fullName>
    <label>Reference Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>