unpackaged/main/default/objects/zkfedex__CommercialInvoice__c/fields/zkfedex__SpecialInstructions__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SpecialInstructions__c</fullName>
    <label>Special Instructions</label>
    <type>TextArea</type>
</CustomField>